@@ -1,5 +1,8 @@
 Changes with Apache 1.3.15
 
+  *) Fix the handling of variable expansion look-ahead in mod_rewrite,
+     i.e. syntax like %{LA-U:REMOTE_USER}. PR#7087 [Tony Finch]
+
   *) Fix the RFC number mentioned when complaining about a missing
      Host: header. PR#7079 [Alexey Toptygin <alexeyt@wam.umd.edu>]
 
